Fix for widget spacing in migrated sites

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -17,8 +17,7 @@
     }
 
 
-    .container .widget[data-name="row"],
-    .container .widget[data-name="row"] .widget {
+    .container .widget[data-name="row"] {
         margin: 0;
         width: auto;
 
